--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
